--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">Trojans_Navbar</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="textview">TextView</string>
+    <string name="button1">Button</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="already_have_an_account">Already have an account</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in_here">sign in here</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up_here">Sign up here</string>
+    <string name="welcome_trojans">Welcome Trojans</string>
+    <string name="button2">Button</string>
+    <string name="logout">logout</string>
 </resources>
